--- a/Readme
+++ b/Readme
@@ -6,3 +6,6 @@ game_id	"238960"
 name	"通货样式模板"
 reference	"[]"
 text	"<p><br></p>{{pre|通货样式测试}}\n<p><br></p>\n<p><br></p>\n<p><br></p>"
+
+使用浏览器自动化
+playwright install chromium
